--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,6 +2,10 @@
 
 <h1>Home</h1>
 <p><%= homeString %></p>
-<% console.log(posts) %>
+
+<% posts.forEach(function(post) {%>
+   <h1> <%= post.title; %> </h1>
+   <p> <%= post.text; %> </p>
+    <% }) %>
 
 <%- include('partials/footer'); -%>
