--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,8 +4,10 @@
 <p><%= homeString %></p>
 
 <% posts.forEach(function(post) {%>
-   <h1> <%= post.title; %> </h1>
-   <p> <%= post.text; %> </p>
-    <% }) %>
+<h1> <%= post.title; %> </h1>
+<p> <%= post.text.substring(0,100) + " ..."; %>
+    <a href="/posts/<%= post.title %>">Read More</a>
+</p>
+<% }) %>
 
 <%- include('partials/footer'); -%>
