--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,18 @@
-<%- include('partials/header'); -%>
 
+<%- include("partials/header"); -%>
 <h1>Home</h1>
-<p><%= homeString %></p>
+<p> <%= startingContent %> </p>
 
-<% posts.forEach(function(post) {%>
-<h1> <%= post.title; %> </h1>
-<p> <%= post.text.substring(0,100) + " ..."; %>
-    <a href="/posts/<%=post.title%>">Read More</a>
+<%  posts.forEach(function(post){ %>
+
+<h1><%=post.title%></h1>
+<p>
+<%=post.content.substring(0, 100) + " ..."%>
+<a href="/posts/<%=post.title%>">Read More</a>
 </p>
+
+
 <% }) %>
 
-<%- include('partials/footer'); -%>
+
+<%- include("partials/footer"); -%>
